# sca-monitor

./: .gitignore  pyproject.toml
deploy/: postgres.env.example  sca-monitor.env.example
docs/: design-review-2026-06-10.md  harness-review-2026-06-10.md  reported-supply-chain-alert-platform.md  software-design-specification.md
frontend/: app.js  index.html  styles.css
harness/: README.md  backend-deployment.md  bootstrap.md  cicd-automation.md  database-deployment.md  deployment-environment.md  frontend-deployment.md  implementation-plan.md  network-and-ports.md  observability.md  operations-runbook.md  requirements.md  secrets-and-config.md
scripts/: advisory_source_preflight.py  alert_dispatcher_activation_check.py  alert_dispatcher_go_live_gate.py  alert_dispatcher_preflight.py  alert_webhook_smoke.py  backfill_canonical_impact_keys.py  backup_database.py  bootstrap_advisory_sync.py  bootstrap_readiness_check.py  ci_smoke.sh  cisa_kev_sync.py  configure_runtime_inputs.py  create_daily_digest.py  cutover_readiness_report.py  database_env_dry_run_gate.py  db_smoke.py  deploy_db_gate.sh  deploy_remote.sh  deploy_systemd_gate.sh  deployment_input_readiness.py  dispatch_alerts.py  evaluate_advisory_sync_freshness.py  evaluate_sla_escalations.py  expire_accepted_risks.py  ghsa_sync.py  http_smoke.py  install_systemd_units.sh  merge_canonical_advisories.py  migrate.py  migration_manifest_check.py  nvd_cve_sync.py  osv_sync.py  poll_endpoints.py  postgres_cutover_readiness.py  postgres_docker_smoke_gate.sh  postgres_integration_smoke.py  postgres_prepare_rehearsal.py  (+9 more)
(+54 files in other folders)
