[project]
name = "sca-monitor"
version = "0.1.0"
description = "Reported supply chain advisory monitoring MVP"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
exclude = ["deploy*", "harness*", "frontend*", "migrations*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
